# goit-pyweb-hw-07

./: config.ini  db.py  models.py  my_select.py  pyproject.toml  readme.md  seeds.py
migrations/: env.py
migrations/versions/: 70f191b6bfd1_init.py
